// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Register should render correctly when no props provided 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    onSubmit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TextInput
          field="username"
          label="Username"
          placeholder="mick.bern"
          required={true}
        />,
        <TextInput
          field="password"
          label="New password"
          placeholder="*********"
          type="password"
        />,
        <button
          className="btn"
          type="submit"
        >
          Register
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "username",
          "label": "Username",
          "placeholder": "mick.bern",
          "required": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "password",
          "label": "New password",
          "placeholder": "*********",
          "type": "password",
          "validate": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Register",
          "className": "btn",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Register",
        "type": "button",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TextInput
            field="username"
            label="Username"
            placeholder="mick.bern"
            required={true}
          />,
          <TextInput
            field="password"
            label="New password"
            placeholder="*********"
            type="password"
          />,
          <button
            className="btn"
            type="submit"
          >
            Register
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "username",
            "label": "Username",
            "placeholder": "mick.bern",
            "required": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "password",
            "label": "New password",
            "placeholder": "*********",
            "type": "password",
            "validate": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Register",
            "className": "btn",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Register",
          "type": "button",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`(Component) Register should render correctly when the prop isLoading is set to false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    isLoading={false}
    onSubmit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TextInput
          field="username"
          label="Username"
          placeholder="mick.bern"
          required={true}
        />,
        <TextInput
          field="password"
          label="New password"
          placeholder="*********"
          type="password"
        />,
        <button
          className="btn"
          type="submit"
        >
          Register
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "username",
          "label": "Username",
          "placeholder": "mick.bern",
          "required": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "password",
          "label": "New password",
          "placeholder": "*********",
          "type": "password",
          "validate": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Register",
          "className": "btn",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Register",
        "type": "button",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TextInput
            field="username"
            label="Username"
            placeholder="mick.bern"
            required={true}
          />,
          <TextInput
            field="password"
            label="New password"
            placeholder="*********"
            type="password"
          />,
          <button
            className="btn"
            type="submit"
          >
            Register
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "username",
            "label": "Username",
            "placeholder": "mick.bern",
            "required": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "password",
            "label": "New password",
            "placeholder": "*********",
            "type": "password",
            "validate": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Register",
            "className": "btn",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Register",
          "type": "button",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`(Component) Register should render correctly when the prop isLoading is set to true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    isLoading={true}
    onSubmit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TextInput
          field="username"
          label="Username"
          placeholder="mick.bern"
          required={true}
        />,
        <TextInput
          field="password"
          label="New password"
          placeholder="*********"
          type="password"
        />,
        <button
          className="btn"
          type="submit"
        >
          Register
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "username",
          "label": "Username",
          "placeholder": "mick.bern",
          "required": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "error": undefined,
          "field": "password",
          "label": "New password",
          "placeholder": "*********",
          "type": "password",
          "validate": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Register",
          "className": "btn",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Register",
        "type": "button",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TextInput
            field="username"
            label="Username"
            placeholder="mick.bern"
            required={true}
          />,
          <TextInput
            field="password"
            label="New password"
            placeholder="*********"
            type="password"
          />,
          <button
            className="btn"
            type="submit"
          >
            Register
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "username",
            "label": "Username",
            "placeholder": "mick.bern",
            "required": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "password",
            "label": "New password",
            "placeholder": "*********",
            "type": "password",
            "validate": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Register",
            "className": "btn",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Register",
          "type": "button",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
